...
        android:onClick="OnGoBackClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_exhibit_list"
        android:layout_width="410dp"
        android:layout_height="611dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/num_of_exhibits"
        android:layout_width="381dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="22dp"
        android:gravity="center"
...
