<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/selected_exhibit"
        android:layout_width="278dp"
        android:layout_height="31dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:hint="selected_exhibit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delete_button"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:gravity="center"
        android:text="✕"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selected_exhibit" />
</androidx.constraintlayout.widget.ConstraintLayout>