...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">


    <TextView
        android:id="@+id/exhibit"
        android:layout_width="310dp"
        android:layout_height="39dp"

        android:layout_marginStart="39dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="3dp"
...
